# btk-hackathon

./: .env.example  .gitattributes  .gitignore  .impeccable.md  AGENTS.md  LICENSE  Makefile  README.md  SETUP.md  TEAM_PROTOCOL.md  WORKDIVISION.md  coolify.yaml  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_system_categories.py  0003_birth_date_family_and_recurrence.py  0004_income_expense_categories.py  0004_saving_goals.py  0005_saving_goals.py  0006_accumulation_goals.py  0007_recurring_income.py  0008_transaction_subscription_link.py  0009_generated_reports.py
backend/app/: __init__.py  auth.py  config.py  db.py  main.py
backend/app/agent/: __init__.py  graph.py  prompts.py  tools.py
backend/app/models/: __init__.py  base.py  category.py  conversation.py  generated_report.py  insight.py  memory.py  message.py  saving_goal.py  subscription.py  transaction.py  user.py
backend/app/routers/: __init__.py  _scoping.py  auth.py  categories.py  chat.py  conversations.py  exports.py  family.py  insights.py  memory.py  receipts.py  recurring.py  reports.py  saving_goals.py  stt.py  subscriptions.py  transactions.py  tts.py  voice.py
backend/app/schemas/: __init__.py  auth.py  category.py  chat.py  conversation.py  family.py  insight.py  memory.py  receipt.py  saving_goal.py  stt.py  subscription.py  transaction.py  tts.py  voice.py
backend/app/services/: __init__.py  agent_runner.py  envelopes.py  image_gen.py  insights.py  minio.py  ocr.py  recurring_materializer.py  report_charts.py  report_illustrations.py  report_storage.py  report_types.py  reports.py  saving_goals.py  smart_plans.py  stt.py  tts.py  voice.py
backend/app/utils/: __init__.py  age.py  date_format.py  recurrence.py  tl_format.py
backend/app/workers/: __init__.py  demo_seed.py  proactive.py
backend/tests/: conftest.py  test_agent_graph.py  test_agent_tools.py  test_auth.py  test_categories.py  test_chat_stream.py  test_conversations.py  test_demo_seed.py  test_exports.py  test_family.py  test_health.py  test_image_gen.py  test_insights.py  test_ocr.py  test_proactive_worker.py  test_recurring_materializer.py  test_recurring_router.py  test_saving_goals.py  test_stt.py  test_subscriptions.py  test_transactions.py  test_tts.py  test_utils.py  test_voice.py
docs/: agent_sse_example.json  decisions.md  deploy.md  manual_test_added_features.md  master_plan.md
docs/screenshots/: README.md
frontend/: .dockerignore  .prettierignore  Dockerfile  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  (+2 more)
seeds/: demo_family.py
(+80 files in other folders)
