[project]
# WHY: hyphen in package name is fine for `name`; the import package is `app`.
name = "cuzdan-kocu-backend"
version = "0.1.0"
description = "Cüzdan Koçu — FastAPI backend (BTK Hackathon)."
readme = "../README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }

dependencies = [
    # ---- Web framework ----
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # ---- Database / ORM / migrations ----
    # WHY: psycopg v3 (binary build) is the modern driver; SQLAlchemy 2.0 supports it natively.
    "sqlalchemy>=2.0.36",
    "psycopg[binary]>=3.2.0",
    "alembic>=1.13.0",
    # ---- Settings / validation ----
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    # ---- Auth ----
    # WHY: passlib[bcrypt] is the de-facto FastAPI password hashing combo; PyJWT for tokens.
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.9.0",
    # ---- Misc utility ----
    "python-multipart>=0.0.20",   # FastAPI form/file uploads (Day 4 receipts)
    "httpx>=0.27.0",              # async HTTP (used by tests + future MinIO/Gemini calls)
]

[dependency-groups]
dev = [
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    # types
    "types-passlib>=1.7.7",
]

# ===== Build backend (uv builds wheels via setuptools/hatchling; we don't ship a wheel,
#       so we declare a package layout for editable installs only).
[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ===== Ruff (lint + format) =====
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic/versions"]   # autogenerated migrations are stylistically loose

[tool.ruff.lint]
# WHY: a focused, opinionated set — pyflakes (F), pycodestyle (E,W), import order (I),
# bugbear (B), comprehensions (C4), simplify (SIM), naming (N), and pyupgrade (UP).
select = ["E", "F", "W", "I", "B", "C4", "SIM", "N", "UP"]
ignore = [
    "E501",   # line length handled by formatter
    "B008",   # FastAPI uses `Depends()` defaults; that pattern is intentional, not a bug.
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B", "SIM"]

[tool.ruff.format]
quote-style = "double"

# ===== mypy (strict) =====
[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/versions/.*"]

[[tool.mypy.overrides]]
# WHY: passlib has no inline type hints; types-passlib helps but bcrypt subpath is loose.
module = ["passlib.*"]
ignore_missing_imports = true

# ===== pytest =====
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
